--- a/examples/visits/package.json
+++ b/examples/visits/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
         "express": "*",
-        "redis": "2.8.0"
+        "redis": "^4.7.0"
     },
     "scripts": {
         "start": "node index.js"
